fixed scrollbar problem

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,30 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow: overlay;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .home,
 .services,
 .products,
