--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -1,12 +1,12 @@
 .modal {
-    background-color: rgb(0, 0, 0, .75);
+    background-color: rgb(0, 0, 0, 0.75);
     width: 100vw;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 9999;
-    display:none;
+    display: none;
     justify-content: center;
     align-items: center;
 }
@@ -18,15 +18,15 @@
     width: 530px;
     height: 520px;
 }
- 
-@media only screen and (max-width: 600px)  {  
+
+@media only screen and (max-width: 600px) {
     .modal_dialog {
         width: 100%;
     }
-}  
+}
 
 .modalOpen {
-    display:grid;
+    display: grid;
 }
 
 .banner {
@@ -44,7 +44,7 @@
     background-position: center;
 }
 
-.pmodal{
+.pmodal {
     margin-bottom: 25px;
 }
 
@@ -52,23 +52,23 @@
     margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 600px)  {  
+@media only screen and (max-width: 600px) {
     .title-modal {
-        font-size:1.2rem;
+        font-size: 1.2rem;
     }
 
-    .pmodal{
-        font-size: .8rem;
+    .pmodal {
+        font-size: 0.8rem;
         margin-bottom: 15px;
     }
-} 
+}
 
 .close-modal-btn {
     display: block;
     width: 25px;
     height: 25px;
     margin-left: 465px;
-    border:none;
+    border: none;
     background: transparent;
     font-weight: bold;
     font-size: 20px;
@@ -76,16 +76,20 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 600px)  {  
+@media only screen and (max-width: 600px) {
     .close-modal-btn {
         margin-left: 0px;
-        right:30px;
+        right: 30px;
     }
-} 
+}
 
 .scroll-div {
     width: 100%;
     height: 90%;
     overflow: hidden;
     overflow-y: scroll;
+}
+
+.scroll-div::-webkit-scrollbar {
+    width: 3px;
 }
